--- a/main.html
+++ b/main.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <title>Welcome to Accio Jobs</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <h1>Welcome to Accio Jobs!</h1>
+    <!-- You can add more content here as needed -->
 </body>
-
 </html>
